[package]
name = "edpuzzle_skip"
version = "0.1.0"
authors = ["sanjaykdragon <sanjaykdragon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "0.12.0", features = ["json"] }
serde_json = "*"
serde = { version = "*", features = ["derive"] }